# flyengine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json.template  CodingGuidelines.md  Generate.ps1  Generate.sh  GenerateUWPvs2019.bat  GenerateUWPvs2022.bat  GenerateWin64vs2022.bat  GenerateWin64vs2022NoVulkan.bat  LICENSE.md  README.md  RunCMake.ps1  RunCMake.sh  Windows-x64.yml  appveyor.yml  cgmanifest.json  launch.vs.json  plCMakeConfig.cmake
Code/Editor/EditorEngineProcess/: CMakeLists.txt  EditorEngineProcess.cpp  EngineProcGameApp.cpp  EngineProcGameApp.h  EngineProcGameAppUWP.cpp  EngineProcGameAppUWP.h
Code/Editor/EditorEngineProcessFramework/: CMakeLists.txt  EditorEngineProcessFrameworkDLL.h  EditorEngineProcessFrameworkPCH.cpp
Code/Editor/EditorEngineProcessFramework/EngineProcess/: EngineProcessApp.h  EngineProcessAppUWP.h  EngineProcessCommunicationChannel.cpp  EngineProcessCommunicationChannel.h  EngineProcessDocumentContext.h  EngineProcessMessages.h  EngineProcessViewContext.h  GuidHandleMap.h  RemoteViewContext.h  ViewRenderSettings.h  WorldRttiConverterContext.h
Code/Editor/EditorEngineProcessFramework/Gizmos/: GizmoComponent.h  GizmoHandle.h  GizmoRenderer.h
Code/Editor/EditorEngineProcessFramework/IPC/: IPCObjectMirrorEngine.cpp  IPCObjectMirrorEngine.h  ProcessCommunicationChannel.cpp  ProcessCommunicationChannel.h  SyncObject.cpp  SyncObject.h
Code/Editor/EditorEngineProcessFramework/LongOps/: LongOpControllerManager.h  LongOpWorkerManager.h  LongOps.h
Code/Editor/EditorEngineProcessFramework/PickingRenderPass/: PickingRenderPass.cpp  PickingRenderPass.h
Code/Editor/EditorEngineProcessFramework/SceneExport/: SceneExportModifier.cpp  SceneExportModifier.h
Code/Editor/EditorProcessor/: CMakeLists.txt  EditorProcessor.cpp
Code/EditorPlugins/AmplitudeAudio/EditorPluginAmplitudeAudio/: AmplitudeAudioPlugin.plPluginBundle  CMakeLists.txt  EditorPluginAmplitudeAudio.cpp  EditorPluginAmplitudeAudioDLL.h  EditorPluginAmplitudeAudioPCH.cpp  EditorPluginAmplitudeAudioPCH.h  finalize.cmake
Code/EditorPlugins/Fileserve/EditorPluginFileserve/: CMakeLists.txt  EditorPluginFileserveDLL.h  EditorPluginFileservePCH.cpp
Code/EditorPlugins/Scene/EditorPluginScene/: CMakeLists.txt  EditorPluginScene.cpp  EditorPluginSceneDLL.h  EditorPluginScenePCH.cpp  Scene.plPluginBundle
Code/EditorPlugins/Scene/EnginePluginScene/: CMakeLists.txt  EnginePluginSceneDLL.h  EnginePluginScenePCH.cpp
Code/Engine/RendererDX11/: CMakeLists.txt  RendererDX11DLL.h  RendererDX11PCH.cpp
Code/Engine/RendererDX11/CommandEncoder/: CommandEncoderImplDX11.h
Code/Engine/RendererDX11/Device/: DeviceDX11.h  PassDX11.h  SwapChainDX11.h
Code/Engine/RendererDX11/Resources/: BufferDX11.h  QueryDX11.h  RenderTargetViewDX11.h  ResourceViewDX11.h  SharedTextureDX11.h  TextureDX11.h  UnorderedAccessViewDX11.h
Code/Engine/RendererDX11/Shader/: ShaderDX11.h  VertexDeclarationDX11.h
Code/Engine/RendererDX11/State/: StateDX11.h
Code/Engine/RendererDX12/: CMakeLists.txt  RendererDX12DLL.h  RendererDX12Helpers.h  RendererDX12PCH.cpp  RendererDX12PCH.h
Code/Engine/RendererDX12/Cache/: ResourceCacheD3D12.h
Code/Engine/RendererDX12/Device/: D3D12Device.h  D3D12Pass.h
Code/Engine/RendererDX12/MemoryAllocation/: D3D12MA.h  D3D12MemoryAllocation.h
Code/Engine/RendererDX12/Resources/: RenderTargetViewD3D12.h  TextureD3D12.h
Code/Engine/ShaderCompilerDXC/: CMakeLists.txt  ShaderCompilerDXC.cpp  ShaderCompilerDXC.h  ShaderCompilerDXCDLL.h  SpirvMetaData.h  finalize.cmake
Code/Engine/ShaderCompilerHLSL/: CMakeLists.txt  ShaderCompilerHLSL.cpp  ShaderCompilerHLSL.h  ShaderCompilerHLSLDLL.h  finalize.cmake
Code/Engine/Texture/: CMakeLists.txt  TextureDLL.h  TexturePCH.cpp  TexturePCH.h  cgmanifest.json
Code/Engine/Texture/DirectXTex/: BC.cpp  BC4BC5.cpp  BC6HBC7.cpp  BCDirectCompute.cpp  DDS.h  DirectXTexCompress.cpp  DirectXTexCompressGPU.cpp  DirectXTexConvert.cpp  DirectXTexD3D11.cpp  DirectXTexD3D12.cpp  (+17 more)
Code/EnginePlugins/OpenVRPlugin/: Basics.h  CMakeLists.txt  OpenVRPluginPCH.cpp  OpenVRSingleton.cpp  OpenVRSingleton.h  OpenVRStartup.cpp  init.cmake
Code/EnginePlugins/OpenXRPlugin/: Basics.h  CMakeLists.txt  OpenXR.plPluginBundle  OpenXRDeclarations.h  OpenXRHandTracking.cpp  OpenXRHandTracking.h  OpenXRIncludes.h  OpenXRInputDevice.cpp  OpenXRInputDevice.h  OpenXRPluginPCH.cpp  OpenXRPluginPCH.h  OpenXRRemoting.cpp  OpenXRRemoting.h  OpenXRSingleton.cpp  OpenXRSingleton.h  OpenXRSpatialAnchors.cpp  OpenXRSpatialAnchors.h  OpenXRSwapChain.cpp  OpenXRSwapChain.h  finalize.cmake  init.cmake
Code/EnginePlugins/RenderDocPlugin/: CMakeLists.txt  RenderDoc.plPluginBundle  RenderDocPluginDLL.h  RenderDocPluginPCH.cpp  RenderDocSingleton.cpp  RenderDocSingleton.h  finalize.cmake  init.cmake
Code/Tools/ArchiveTool/: ArchiveTool.cpp  CMakeLists.txt  finalize.cmake
Code/Tools/Fileserve/: App.cpp  CMakeLists.txt  Console.cpp  Fileserve.cpp  Fileserve.h  Gui.cpp  Gui.moc.h
Code/Tools/Inspector/: CMakeLists.txt  CVarsWidget.cpp  CVarsWidget.moc.h  CVarsWidget.ui  DataTransferWidget.cpp  DataTransferWidget.moc.h  FileWidget.cpp  FileWidget.moc.h  GlobalEventsWidget.cpp  GlobalEventsWidget.moc.h  InputWidget.cpp  InputWidget.moc.h  Inspector.cpp  LogDockWidget.cpp  LogDockWidget.moc.h  LogDockWidget.ui  MainWidget.cpp  MainWidget.moc.h  MainWindow.cpp  MainWindow.moc.h  MainWindow.ui  MainWindowActions.cpp  MemoryWidget.cpp  MemoryWidget.moc.h  PluginsWidget.cpp  PluginsWidget.moc.h  ReflectionWidget.cpp  ReflectionWidget.moc.h  ResourceWidget.cpp  ResourceWidget.moc.h  StatVisWidget.cpp  StatVisWidget.moc.h  StatVisWidget.ui  SubsystemsWidget.cpp  SubsystemsWidget.moc.h  TimeWidget.cpp  TimeWidget.moc.h
Code/Tools/Player/: CMakeLists.txt  Player.cpp  Player.h
Code/Tools/ShaderCompiler/: CMakeLists.txt  ShaderCompiler.cpp  ShaderCompiler.h
Code/UnitTests/GameEngineTest/: CMakeLists.txt  GameEngineTest.cpp
Code/UnitTests/RendererTest/: CMakeLists.txt  RendererTest.cpp  RendererTestPCH.h
(+6399 files in other folders)
